Feature/Check health
